tests/mm0_mmu/pass/int.mmu
(sort s)
(term a () (s ()))
