tests/mm0_mmu/fail/bad-sort5.mmu
(sort s12 free provable sort)